--- a/contrib/homebrew/makefile.osx.patch
+++ b/contrib/homebrew/makefile.osx.patch
@@ -32,6 +32,7 @@ index bef0ef3..07ef8d3 100644
  TESTLIBS += \
   $(DEPSDIR)/lib/libboost_unit_test_framework-mt.a
  LIBS += \
+- $(DEPSDIR)/lib/db48/libdb_cxx-4.8.a \
 + $(DB4DIR)/lib/libdb_cxx-4.8.a \
   $(DEPSDIR)/lib/libboost_system-mt.a \
   $(DEPSDIR)/lib/libboost_filesystem-mt.a \
@@ -43,4 +44,5 @@ index bef0ef3..07ef8d3 100644
 + $(OPENSSLDIR)/lib/libssl.a \
 + $(OPENSSLDIR)/lib/libcrypto.a \
   -lz
- 
+ else
+ TESTLIBS += \
